src/styles/base.css
*,
*:before,
*:after {
  box-sizing: border-box;
}

#header {
  font-family: "Montserrat Alternates", sans-serif;
  font-weight: 400;
  font-size: 4em;
  user-select: none;
}

#header:hover {
  cursor: default;
}

a:hover {
  color: crimson;
}

